--- a/values.yaml
+++ b/values.yaml
@@ -4,17 +4,17 @@ imagePullPolicy: IfNotPresent
 # ref: https://kubernetes.io/docs/user-guide/node-selection/
 nodeSelector: {}
 
-traefik:
+redis:
   image:
-    repository: traefik
-    tag: 2.1.8
+    repository: redis
+    tag: 4.0.10
 
 
 
 
 persistence:
   enabled: true
-  traefik:
+  redis:
     ## traefik data Persistent Volume Storage Class
     ## If defined, storageClassName: <storageClass>
     ## If set to "-", storageClassName: "", which disables dynamic provisioning
