--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,19 +1,17 @@
 apiVersion: v1
-appVersion: 2.1.8
-description: traefik
+appVersion: 4.0.10
+description: redis
 engine: gotpl
-home: https://traefik.io/
-icon: file://../traefik.logo.png
+home: http://redis.io/
+icon: https://bitnami.com/assets/stacks/redis/img/redis-stack-220x234.png
 keywords:
-- traefik
-- ingress
-- acme
-- letsencrypt
+- redis
+- keyvalue
+- database
 maintainers:
 - email: h.soltani@khallagh.com
   name: SantoDE
-name: traefik
+name: redis
 sources:
-- https://github.com/containous/traefik
-- https://github.com/helm/charts/tree/master/stable/traefik
+- https://github.com/bitnami/bitnami-docker-redis
 version: 1.0.0
