--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -1,55 +1,48 @@
-apiVersion: {{ template "traefik.deployment.apiVersion" . }}
+apiVersion: {{ template "redis.deployment.apiVersion" . }}
 kind: Deployment
 metadata:
-  name: {{ template "traefik.fullname" . }}
+  name: {{ template "redis.fullname" . }}
   labels:
-    app: {{ template "traefik.name" . }}
-    chart: {{ template "traefik.chart" . }}
+    app: {{ template "redis.name" . }}
+    chart: {{ template "redis.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{ template "traefik.name" . }}
+      app: {{ template "redis.name" . }}
       release: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app: {{ template "traefik.name" . }}
+        app: {{ template "redis.name" . }}
         release: {{ .Release.Name }}
     spec:
       containers:
       - name: traefik
-        image: {{ .Values.traefik.image.repository }}:{{ .Values.traefik.image.tag }}
+        image: {{ .Values.redis.image.repository }}:{{ .Values.redis.image.tag }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         args:
-        - "--log.level=DEBUG"
-        - "--api.insecure=true"
-        - "--providers.docker=true"
-        - "--providers.docker.exposedbydefault=false"
-        - "--entryPoints.web.address=:80"
-        - "--entryPoints.web.forwardedHeaders.insecure"
+        
         env:
           
         volumeMounts:
-        - name: traefik-data
-          mountPath: "/var/run/docker.sock"
+        - name: redis-data
+          mountPath: /data
         ports:
         - name: http
           containerPort: 80
           protocol: TCP
-        - name: https
-          containerPort: 443
-          protocol: TCP
+        
      ## volumes:
      ## - name: data
      ##   emptyDir: {}
       volumes:
-        - name: traefik-data
+        - name: redis-data
           {{- if .Values.persistence.enabled }}
           persistentVolumeClaim:
-            claimName: {{ template "traefik.fullname" . }}
+            claimName: {{ template "redis.fullname" . }}
           {{- else }}
           emptyDir: {}
           {{- end }}
