--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "traefik.fullname" . }}
+  name: {{ template "redis.fullname" . }}
   labels:
-    app: {{ template "traefik.name" . }}
-    chart: {{ template "traefik.chart" . }}
+    app: {{ template "redis.name" . }}
+    chart: {{ template "redis.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
   selector:
-    app: {{ template "traefik.name" . }}
+    app: {{ template "redis.name" . }}
     release: {{ .Release.Name }}
   clusterIP: None
   ports:
